--- a/website/templates/results_dogs.html
+++ b/website/templates/results_dogs.html
@@ -5,7 +5,7 @@
 <br>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <li class="nav-item active">
-        <a class="nav-link btn btn-warning" href="#" onclick="togglemenu()">Filter</a>
+        <a class="nav-link btn btn-warning" href="#" onclick="togglemenu()">Filter by page</a>
         
         <div id="sidebar">
             <div class="container-fluid" id="container-filter">
