--- a/website/static/main.css
+++ b/website/static/main.css
@@ -95,9 +95,6 @@ li {
   text-align: left;
 }
 
-/* #fs_app{
-    padding: 10px 15px 0;
-  } */
 
 #fs_app > section:not(#fs_header_bar) {
   padding-top: 25px;
@@ -124,181 +121,13 @@ li {
   text-transform: uppercase;
 }
 
-.btnPrice {
-  width: 100%;
-  background: transparent;
-  border: 1px solid #ff286c;
-  border-radius: 2px;
-  padding: 3px;
-  color: #ff286c;
-  font-size: 14px;
-  font-weight: 300 !important;
-  margin-top: 15px;
-  margin-bottom: 20px;
-}
-
-.active .btnPrice {
-  background: #ff286c;
-  color: #fff;
-}
-
-#fs_price_body .line1 {
-  height: 2px;
-  width: 100%;
-  background: #eee;
-}
-#fs_price_body .line {
-  position: absolute;
-  height: 2px;
-  width: 45%;
-  background: #ff286c;
-  /* left: 9%; */
-}
-
-#fs_price_body .line:before {
-  position: absolute;
-  content: "";
-  display: block;
-  height: 6px;
-  width: 6px;
-  background: #ff286c;
-  border-radius: 50%;
-  left: -2px;
-  top: -2px;
-}
-
-#fs_price_body .line:after {
-  position: absolute;
-  content: "";
-  display: block;
-  height: 6px;
-  width: 6px;
-  background: #ff286c;
-  border-radius: 50%;
-  right: -2px;
-  bottom: -2px;
-}
-
-#fs_price_body ul {
-  padding: 0;
-  margin-top: 20px;
-  margin-bottom: 0px;
-}
-
-#fs_price_body ul li {
-  display: inline-block;
-  color: #d4d4d4;
-}
-
-#fs_price_body ul li:last-child {
-  float: right;
-}
-
-#fs_distance_body ul {
-  padding: 0;
-  display: block;
-  margin-top: 15px;
-}
-
-#fs_distance_body ul li {
-  /* margin-bottom: 18px; */
-  font-size: 13px;
-  font-weight: 400;
-}
-
-#fs_distance_body .text-right {
-  float: right;
-  height: 13px;
-  width: 13px;
-  border: 1px solid #999;
-  margin-top: 3px;
-}
-
-#fs_distance_body li.active span:first-child {
-  color: #ff286c;
-}
-
-#fs_distance_body li.active span:last-child {
-  background: #ff286c;
-  color: #fff;
-  border: 1px solid #ff286c;
-  font-size: 10px;
-  line-height: 100%;
-  text-align: center;
-}
-
-#fs_time_body ul {
-  padding: 0;
-  display: block;
-  margin-top: 15px;
-}
-
-#fs_time_body ul li {
-  /* margin-bottom: 18px; */
-  font-size: 13px;
-  font-weight: 400;
-}
-
-#fs_time_body .text-right {
-  float: right;
-  height: 13px;
-  width: 13px;
-  border: 1px solid #999;
-  margin-top: 3px;
-}
-
-#fs_time_body li.active span:first-child {
-  color: #ff286c;
-}
-
-#fs_time_body li.active span:last-child {
-  background: #ff286c;
-  color: #fff;
-  border: 1px solid #ff286c;
-  font-size: 10px;
-  line-height: 100%;
-  text-align: center;
-}
-
-#fs_rating ul {
-  padding: 0;
-  display: block;
-  margin-top: 15px;
-}
-
-#fs_rating ul li {
-  /* margin-bottom: 18px; */
-  font-size: 13px;
-  font-weight: 400;
-}
-
-#fs_rating .text-right {
-  float: right;
-  height: 13px;
-  width: 13px;
-  border: 1px solid #999;
-  margin-top: 3px;
-}
-
-#fs_rating i {
-  color: #eee;
-}
-
-#fs_rating i.dark {
-  color: #000;
-}
-
-#fs_rating {
-  border: none !important;
-}
-
 /* SIDE BAR */
 #sidebar {
   position: fixed;
   width: 30%;
   height: fit-content;
   left: -30%;
-  background-color: #999;
+  background-color: rgb(245, 244, 240);
   /* background-color: #ffffff; */
 }
 
