--- a/website/templates/results_dogs.html
+++ b/website/templates/results_dogs.html
@@ -5,7 +5,7 @@
 <br>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <li class="nav-item active">
-        <a class="nav-link btn btn-warning" href="#" onclick="togglemenu()">Filter by page</a>
+        <a class="nav-link btn btn-warning" href="#" onclick="toggleMenu()">Filter by page</a>
         
         <div id="sidebar">
             <div class="container-fluid" id="container-filter">
@@ -13,7 +13,7 @@
                     <section class="col-12" id="fs_header_bar">
                         <div class="row">
                             <div class="col-2">
-                                <button class="btn" type="button"><i class='bx bxs-chevron-left' onclick="togglemenu()"></i></button>
+                                <button class="btn" type="button"><i class='bx bxs-chevron-left' onclick="toggleMenu()"></i></button>
                             </div>
                             <div class="col-10" id="fs_page_title">
                                 Filters
@@ -56,7 +56,7 @@
                                 </h5>
                               </div>
                               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#filterAccordion">
-                                <div class="card-body">
+                                <div class="card-body" id="cardSecondary">
                                     {% for n in data["secondaryBreeds"] %}
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="{{n}}" id="filterSecondaryBreeds">
@@ -77,7 +77,7 @@
                                 </h5>
                               </div>
                               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#filterAccordion">
-                                <div class="card-body">
+                                <div class="card-body" id="cardAge">
                                     {% for n in data["age"] %}
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="{{n}}" id="filterAge">
@@ -98,7 +98,7 @@
                                 </h5>
                               </div>
                               <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#filterAccordion">
-                                <div class="card-body">
+                                <div class="card-body" id="cardSize">
                                     {% for n in data["size"] %}
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="{{n}}" id="filterSize">
@@ -119,7 +119,7 @@
                                 </h5>
                               </div>
                               <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#filterAccordion">
-                                <div class="card-body">
+                                <div class="card-body" id="cardGender">
                                     {% for n in data["gender"] %}
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="{{n}}" id="filterGender">
@@ -340,12 +340,12 @@
             <br>
             <ul>
                 <li><strong>Primary Breed:</strong><span id="dog_breed"> {{data["animals"][n].breeds['primary']}} </span><button onclick="dogDescription({{n}})">More Info</button></li>
-                <li><strong>Secondary Breed:</strong> {{data["animals"][n].breeds['secondary']}}</li>
-                <li><strong>Age:</strong> {{data["animals"][n].age}}</li>
-                <li><strong>Size:</strong> {{data["animals"][n].size}}</li>
-                <li><strong>Gender:</strong> {{data["animals"][n].gender}}</li>
-                <li><strong>Distance:</strong> {{data["animals"][n].distance}} miles</li>
-                <li><strong>Added:</strong> {{data["animals"][n].published_at}}</li>
+                <li><strong>Secondary Breed:</strong> <span>{{data["animals"][n].breeds['secondary']}}</span></li>
+                <li><strong>Age:</strong> <span>{{data["animals"][n].age}}</span></li>
+                <li><strong>Size:</strong> <span>{{data["animals"][n].size}}</span></li>
+                <li><strong>Gender:</strong> <span>{{data["animals"][n].gender}}</span></li>
+                <li><strong>Distance:</strong> <span>{{data["animals"][n].distance}}</span> miles</li>
+                <li><strong>Added:</strong> <span>{{data["animals"][n].published_at}}</span></li>
             </ul>
 
             <p id={{n}} style="display:none;"></p>
