implemented sort and filter options for rescue page

--- a/website/templates/results_dogs.html
+++ b/website/templates/results_dogs.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block title %}Search Dogs{% endblock %}
-
+{% extends "base.html" %} {% block title %}Dog Results{% endblock %}
 
 {% block content %}
 <br>
@@ -21,8 +20,6 @@
                         </div>
                     </section>
             
-                    <!-- Primary breed, secondary breed, age, gender -->
-
                     <section class="col-12" id="filterSection">
                         <div class="accordion" id="filterAccordion">
                             <div class="card">
